# database-design

./: .gitignore  README.md  generate_icons.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: canvas.js  connection.js  deleteHelper.js  dict.js  diff.js  fileManager.js  main.js  modal.js  parser.js  properties.js  sidebar.js  sql.js  store.js  table.js  toast.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/ai/: aiConfig.js  aiService.js  aiUI.js  deepseekClient.js  index.js  promptBuilder.js
styles/: main.css
